agregado los diferentes integrantes y descripciones de la organización interna de la fundación

--- a/nosotros.html
+++ b/nosotros.html
@@ -64,6 +64,166 @@
                 <h2>Fundación</h>
             </div>
         </div>
+
+        <div class="container">
+            <div class="col-md-9">
+                <h2>CONSEJO GENERAL</h2>
+                <p>Este consejo sobre la base de un conocimiento técnico acabado de la enfermedad a nivel nacional e internacional, dan las líneas generales del trabajo de la Fundación.
+                    </p>
+                <div class="avatarequipo" id="img1"></div>
+                <div class="avatarequipo" id="img2"></div>
+                <div class="avatarequipo" id="img3"></div>
+                <div class="avatarequipo" id="img4"></div>
+                <div class="avatarequipo" id="img5"></div>
+                <div class="avatarequipo" id="img6"></div>
+                <div class="avatarequipo" id="img7"></div>
+                <div class="avatarequipo" id="img8"></div>
+                <div class="avatarequipo" id="img9"></div>
+                <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingOne">
+                        <h4 class="panel-title">
+                            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <h2>Comité Ejecutivo</h2>
+                            <p>Responsable directo del manejo de la Fundación</p>
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                        <div class="panel-body">
+                            <p>
+                                <h3>Dr. Juan Quintana</h3>
+                                | presidente
+                            </p>
+                            <p>
+                                <h3>Dra. Victoria Beresi</h3> | Beresi
+                            </p>
+                            <p>
+                                <h3>Sr. Fernando Manns</h3> | Tesorero
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingTwo">
+                        <h4 class="panel-title">
+                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            <h2>Directorio Ejecutivo</h2>
+                            <p>Está integrado por un grupo de profesionales y empresarios de reconocida trayectoria, cuyo principal objetivo es la obtención de recursos para los distintos proyectos</p>
+                            </a>
+                        </h2>
+                    </div>
+                    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                        <div class="panel-body">
+                           <p>
+                               <h3>Dr. Juan A. Quintana</h3>
+                           </p>
+                           <p>
+                               <h3>Sr. Fernando Manns</h3>
+                           </p>
+                           <p>
+                               <h3>Sr. Carlos Ossa</h3>
+                           </p>
+                           <p>
+                               <h3>Dr. Felipe Espinoza</h3>
+                           </p>
+                           <p>
+                               <h3>Sr. Alejandro Miralles</h3>
+                           </p>
+                           <p>
+                               <h3>Dra. Victoria Beresi</h3>
+                           </p>
+                           <p>
+                               <h3>Sr. Daniel Lyon</h3>
+                           </p> 
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingThree">
+                        <h4 class="panel-title">
+                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            <h2>Administración</h2>
+                            <p>La administración de la Fundación está a cargo de la Asistente Ejecutiva del Directorio, quien coordina las diferentes acciones que realiza la Fundación.</p>
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                        <div class="panel-body">
+                            <p>
+                                <h3>Sra. Carolina Escudero</h3> | asistente ejecutiva del directorio
+                            </p>
+                            <p>
+                                <h3>Sra.Paz Torrealba</h3> | asistente social
+                            </p>
+                            <p>
+                                <h3>Sra. Lenka Tomulic</h3> | asistente social
+                            </p>
+                            <p>
+                                <h3>Sr. Pedro Munita</h3> | recaudador
+                            </p>
+                            <p>
+                                <h3>Patricio Scaff</h3> | recaudador
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                        <div class="panel-heading" role="tab" id="headingThree">
+                            <h4 class="panel-title">
+                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                <h2>Voluntarios Administrativos</h2>
+                                <p>El voluntariado desarrolla tareas como:
+                                        Recuento semanal de recaudación de alcancías.
+                                        Control telefónico semanal a nivel nacional de Pronto Copec en relación a las alcancías,
+                                        organización de eventos para recaudar fondos,
+                                        captación de socios,
+                                        apoyo en programas recreativos,
+                                        supervisar Departamentos de Acogida.
+                                    </p>
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div class="panel-body">
+                                <p>
+                                    <h3>Eneida Osorio</h3>
+                                </p>
+                                <p>
+                                    <h3>Patricia Romo</h3>
+                                </p>
+                                <p>
+                                    <h3>Florencia Escudero</h3>
+                                </p>
+                                <p>
+                                    <h3>Valeria Mesa</h3>
+                                </p>
+                                <p>
+                                    <h3>Ximena Espinosa</h3>
+                                </p>
+                                <p>
+                                    <h3>María Soledad</h3>
+                                </p>
+                                <p>
+                                    <h3>Cecilia Palomino</h3>
+                                </p>
+                                <p>
+                                    <h3>Karin Cuevas</h3>
+                                </p>
+                                <p>
+                                    <h3>María Elena Blanco</h3>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+            </div>
+        </div>
+            <div class="col-md-3">
+
+            </div>
+        </div>
    
     </main>
     <footer>
