arreglado panel body p y h3

--- a/nosotros.html
+++ b/nosotros.html
@@ -91,17 +91,11 @@
                     </div>
                     <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                         <div class="panel-body">
-                            <p>
-                                <h3>Dr. Juan Quintana</h3>
-                                | presidente
-                            </p>
-                            <p>
-                                <h3>Dra. Victoria Beresi</h3> | Beresi
-                            </p>
-                            <p>
-                                <h3>Sr. Fernando Manns</h3> | Tesorero
-                            </p>
-
+                          <h3>Dr. Juan Quintana</h3><p> | presidente</p>
+                          <br>
+                          <h3>Dra. Victoria Beresi</h3><p> | secretaria</p>
+                          <br>
+                          <h3>Sr. Fernando Manns</h3><p> | Tesorero</p>
                         </div>
                     </div>
                 </div>
@@ -116,27 +110,13 @@
                     </div>
                     <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                         <div class="panel-body">
-                           <p>
-                               <h3>Dr. Juan A. Quintana</h3>
-                           </p>
-                           <p>
-                               <h3>Sr. Fernando Manns</h3>
-                           </p>
-                           <p>
-                               <h3>Sr. Carlos Ossa</h3>
-                           </p>
-                           <p>
-                               <h3>Dr. Felipe Espinoza</h3>
-                           </p>
-                           <p>
-                               <h3>Sr. Alejandro Miralles</h3>
-                           </p>
-                           <p>
-                               <h3>Dra. Victoria Beresi</h3>
-                           </p>
-                           <p>
-                               <h3>Sr. Daniel Lyon</h3>
-                           </p> 
+                            <h3>Dr. Juan A. Quintana</h3><br>
+                            <h3>Sr. Fernando Manns</h3><br>
+                            <h3>Sr. Carlos Ossa</h3><br>
+                            <h3>Dr. Felipe Espinoza</h3><br>
+                            <h3>Sr. Alejandro Miralles</h3><br>
+                            <h3>Dra. Victoria Beresi</h3><br>
+                            <h3>Sr. Daniel Lyon</h3>
                         </div>
                     </div>
                 </div>
@@ -151,21 +131,15 @@
                     </div>
                     <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                         <div class="panel-body">
-                            <p>
-                                <h3>Sra. Carolina Escudero</h3> | asistente ejecutiva del directorio
-                            </p>
-                            <p>
-                                <h3>Sra.Paz Torrealba</h3> | asistente social
-                            </p>
-                            <p>
-                                <h3>Sra. Lenka Tomulic</h3> | asistente social
-                            </p>
-                            <p>
-                                <h3>Sr. Pedro Munita</h3> | recaudador
-                            </p>
-                            <p>
-                                <h3>Patricio Scaff</h3> | recaudador
-                            </p>
+                            <h3>Sra. Carolina Escudero</h3> <p>| asistente ejecutiva del directorio </p>
+                            <br>
+                            <h3>Sra.Paz Torrealba</h3><p>| asistente social</p>
+                            <br>
+                            <h3>Sra. Lenka Tomulic</h3><p> | asistente social</p>
+                            <br>
+                            <h3>Sr. Pedro Munita</h3><p> | recaudador</p>
+                            <br>
+                            <h3>Patricio Scaff</h3> <p> | recaudador</p>
                         </div>
                     </div>
                 </div>
@@ -217,7 +191,7 @@
                             </div>
                         </div>
                     </div>
-                    </div>
+                </div>
             </div>
         </div>
             <div class="col-md-3">
