arreglado los cambios del dropdown

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <div class="carousel-background carousel-background-img">
                 <div class="container">
                   <h1>Niño & Cancer</h1>
-                  <h2>Fundacióoooooon</h>
+                  <h2>Fundación</h>
                 </div>
               </div>
               <div class="item active">
