agregados nombre al consejo general

--- a/nosotros.html
+++ b/nosotros.html
@@ -75,15 +75,51 @@
                 <p>Este consejo sobre la base de un conocimiento técnico acabado de la enfermedad a nivel nacional e
                     internacional, dan las líneas generales del trabajo de la Fundación.
                 </p>
-                <div class="avatarequipo" id="img1"></div>
-                <div class="avatarequipo" id="img2"></div>
-                <div class="avatarequipo" id="img3"></div>
-                <div class="avatarequipo" id="img4"></div>
-                <div class="avatarequipo" id="img5"></div>
-                <div class="avatarequipo" id="img6"></div>
-                <div class="avatarequipo" id="img7"></div>
-                <div class="avatarequipo" id="img8"></div>
-                <div class="avatarequipo" id="img9"></div>
+                <div class="avatarequipo" id="img1">
+                    <div class="perfil">
+                        <h5>Dr. Juan Quintana B.</h5>
+                    </div>
+                </div>
+                <div class="avatarequipo" id="img2">
+                    <div class="perfil">
+                        <h5>Dra. Anette Becker</h5>
+                    </div>
+                </div>
+                <div class="avatarequipo" id="img3">
+                    <div class="perfil">
+                        <h5>Dr. Felipe Espinoza C.</h5>
+                    </div>
+                </div>
+                <div class="avatarequipo" id="img4">
+                    <div class="perfil">
+                        <h5>Dra. Victoria Beresi</h5>
+                    </div>
+                </div>
+                <div class="avatarequipo" id="img5">
+                    <div class="perfil">
+                        <h5>Dr. Carlos Rizzardini</h5>
+                    </div>
+                </div>
+                <div class="avatarequipo" id="img6">
+                    <div class="perfil">
+                        <h5>Dr. Jaime Rojas</h5>
+                    </div>
+                </div>
+                <div class="avatarequipo" id="img7">
+                    <div class="perfil">
+                        <h5>Dr. Eduardo Páez</h5>
+                    </div>
+                </div>
+                <div class="avatarequipo" id="img8">
+                    <div class="perfil">
+                        <h5>Sr. Fernando Manns</h5>
+                    </div>
+                </div>
+                <div class="avatarequipo" id="img9">
+                    <div class="perfil">
+                        <h5>Sr. Daniel Lyon</h5>
+                    </div>
+                </div>
                 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                     <div class="panel panel-default">
                         <div class="panel-heading" role="tab" id="headingOne">
@@ -139,7 +175,8 @@
                                     aria-expanded="false" aria-controls="collapseThree">
                                     <h2>Administración</h2>
                                     <p>La administración de la Fundación está a cargo de la Asistente Ejecutiva del
-                                        Directorio, quien coordina las diferentes acciones que realiza la Fundación.</p>
+                                        Directorio, quien coordina las diferentes acciones que realiza la
+                                        Fundación.</p>
                                 </a>
                             </h4>
                         </div>
@@ -170,7 +207,8 @@
                                     <h2>Voluntarios Administrativos</h2>
                                     <p>El voluntariado desarrolla tareas como:
                                         Recuento semanal de recaudación de alcancías.
-                                        Control telefónico semanal a nivel nacional de Pronto Copec en relación a las
+                                        Control telefónico semanal a nivel nacional de Pronto Copec en relación a
+                                        las
                                         alcancías,
                                         organización de eventos para recaudar fondos,
                                         captación de socios,
@@ -203,12 +241,18 @@
                         </div>
                     </div>
                 </div>
-                <h2>Contáctanos aquí!</h2>
-                <p>Pronto te responderemos</p>
-                <input type="text" class="form-control margenes" placeholder="Hola! Ingresa aquí tu nombre por favor">
-                <input type="text" class="form-control margenes" placeholder="Y aquí, escribe tu e-mail">
-                <textarea class="form-control margenes" rows="3" placeholder="Qué te gustaría comentar o preguntarnos?"></textarea>
-                <button type="submit" class="btn btn-default margenes">Send invitation</button>
+                <div class="row">
+                    <div class="container">
+                        <div class="cabecera-contactos col-md-9">
+                            <h2>Contáctanos aquí!</h2>
+                            <p>pronto te responderemos<p>
+                                    <input type="text" class="form-control margenes" placeholder="Hola! Ingresa aquí tu nombre por favor">
+                                    <input type="text" class="form-control margenes" placeholder="Y aquí, escribe tu e-mail">
+                                    <textarea class="form-control margenes" rows="3" placeholder="Qué te gustaría comentar o preguntarnos?"></textarea>
+                                    <button type="submit" class="btn btn-default margenes">envíar</button>
+                        </div> <!-- /cabecera-contactos -->
+                    </div><!-- / container -->
+                </div><!-- / row -->
             </div>
         </div>
         <div class="col-md-3">
