Intento de arreglar un título y agregado el html estructural a news

--- a/nosotros.html
+++ b/nosotros.html
@@ -70,57 +70,59 @@
         </div>
 
         <div class="container">
-            <div class="col-md-9">
+            <div class="col-md-9 margenes">
                 <h2>CONSEJO GENERAL</h2>
                 <p>Este consejo sobre la base de un conocimiento técnico acabado de la enfermedad a nivel nacional e
                     internacional, dan las líneas generales del trabajo de la Fundación.
                 </p>
-                <div class="avatarequipo" id="img1">
-                    <div class="perfil">
-                        <h5>Dr. Juan Quintana B.</h5>
+                <div class="margenes">
+                    <div class="avatarequipo" id="img1">
+                        <div class="perfil">
+                            <h5>Dr. Juan Quintana B.</h5>
+                        </div>
+                    </div>
+                    <div class="avatarequipo" id="img2">
+                        <div class="perfil">
+                            <h5>Dra. Anette Becker</h5>
+                        </div>
+                    </div>
+                    <div class="avatarequipo" id="img3">
+                        <div class="perfil">
+                            <h5>Dr. Felipe Espinoza C.</h5>
+                        </div>
+                    </div>
+                    <div class="avatarequipo" id="img4">
+                        <div class="perfil">
+                            <h5>Dra. Victoria Beresi</h5>
+                        </div>
+                    </div>
+                    <div class="avatarequipo" id="img5">
+                        <div class="perfil">
+                            <h5>Dr. Carlos Rizzardini</h5>
+                        </div>
+                    </div>
+                    <div class="avatarequipo" id="img6">
+                        <div class="perfil">
+                            <h5>Dr. Jaime Rojas</h5>
+                        </div>
+                    </div>
+                    <div class="avatarequipo" id="img7">
+                        <div class="perfil">
+                            <h5>Dr. Eduardo Páez</h5>
+                        </div>
+                    </div>
+                    <div class="avatarequipo" id="img8">
+                        <div class="perfil">
+                            <h5>Sr. Fernando Manns</h5>
+                        </div>
+                    </div>
+                    <div class="avatarequipo" id="img9">
+                        <div class="perfil">
+                            <h5>Sr. Daniel Lyon</h5>
+                        </div>
                     </div>
                 </div>
-                <div class="avatarequipo" id="img2">
-                    <div class="perfil">
-                        <h5>Dra. Anette Becker</h5>
-                    </div>
-                </div>
-                <div class="avatarequipo" id="img3">
-                    <div class="perfil">
-                        <h5>Dr. Felipe Espinoza C.</h5>
-                    </div>
-                </div>
-                <div class="avatarequipo" id="img4">
-                    <div class="perfil">
-                        <h5>Dra. Victoria Beresi</h5>
-                    </div>
-                </div>
-                <div class="avatarequipo" id="img5">
-                    <div class="perfil">
-                        <h5>Dr. Carlos Rizzardini</h5>
-                    </div>
-                </div>
-                <div class="avatarequipo" id="img6">
-                    <div class="perfil">
-                        <h5>Dr. Jaime Rojas</h5>
-                    </div>
-                </div>
-                <div class="avatarequipo" id="img7">
-                    <div class="perfil">
-                        <h5>Dr. Eduardo Páez</h5>
-                    </div>
-                </div>
-                <div class="avatarequipo" id="img8">
-                    <div class="perfil">
-                        <h5>Sr. Fernando Manns</h5>
-                    </div>
-                </div>
-                <div class="avatarequipo" id="img9">
-                    <div class="perfil">
-                        <h5>Sr. Daniel Lyon</h5>
-                    </div>
-                </div>
-                <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                <div class="panel-group margenes" id="accordion" role="tablist" aria-multiselectable="true">
                     <div class="panel panel-default">
                         <div class="panel-heading" role="tab" id="headingOne">
                             <h4 class="panel-title">
