se corrije una palabra de una noticia

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           <a href="">
             <div class="thumbnail">
               <div class="caption">
-                <h4>Montaña de la Alegría 2018</h4>
+                <h4>Una gran alegría originó la actividad Montaña de la Alegría</h4>
                 <h5>20 agosto 2018</h5>
                 <p>Proyecto recreativo y psicoterapéutico que se realiza desde el año 2002.</p>
               </div>
