--- a/news.html
+++ b/news.html
@@ -66,8 +66,8 @@
                 <div class="col-md-9 noticia margenes">
                     <img src="image/montaña.jpg" alt="">
                     <div class="agrup">
-                        <h6>20 agosto 2018</h6>
-                        <h2>Un gran alegría originó la actividad Montaña de la Alegría</h2>
+                        <h5>20 agosto 2018</h5>
+                        <h2>Una gran alegría originó la actividad Montaña de la Alegría</h2>
                         <h4> Nuestros niños tuvieron un día extraordinario junto a la gente del hotel Portillo</h4>
                     </div>
                     <p>La Fundación Niño y Cáncer quiere agradecer la importante ayuda recibida que ha permitido
