--- a/news.html
+++ b/news.html
@@ -114,6 +114,43 @@
                         <br>
                         Muchas gracias!!! </p>
                 </div>
+                <div class="col-md-3">
+                    <div class="col-md-12">
+                        <a href="">
+                            <div class="thumbnail">
+                                <div class="caption">
+                                    <h4>Una gran alegría originó la actividad Montaña de la Alegría</h4>
+                                    <h5>20 agosto 2018</h5>
+                                    <p>Proyecto recreativo y psicoterapéutico que se realiza desde el año 2002.</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-12">
+                        <a href="">
+                            <div class="thumbnail">
+                                <div class="caption">
+                                    <h4>A volar con Sky</h4>
+                                    <h5>20 agosto 2018</h5>
+                                    <p>La Fundación Niño y Cáncer quiere agradecer a SKY por su increible invitación.
+                                        El Miércoles 4 de
+                                        Octubre fuimos a volar en su nuevo avión A320neoSky.</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-12 ">
+                        <a href="">
+                            <div class="thumbnail">
+                                <div class="caption">
+                                    <h4>Finalizó proceso de postulación a Becas de Estudio 2018</h4>
+                                    <h5>20 agosto 2018</h5>
+                                    <p>El objetivo de este proyecto es beneficiar a jóvenes recuperados de cáncer.</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div><!-- / col-md-3 -->
             </div>
         </div>
 
