terminado sidebar news

--- a/news.html
+++ b/news.html
@@ -115,40 +115,69 @@
                         Muchas gracias!!! </p>
                 </div>
                 <div class="col-md-3">
-                    <div class="col-md-12">
-                        <a href="">
-                            <div class="thumbnail">
-                                <div class="caption">
-                                    <h4>Una gran alegría originó la actividad Montaña de la Alegría</h4>
-                                    <h5>20 agosto 2018</h5>
-                                    <p>Proyecto recreativo y psicoterapéutico que se realiza desde el año 2002.</p>
+                    <div class="sidebarnoticias">
+                        <h3>Más noticias</h3>
+                        <div class="col-md-12">
+                            <a href="">
+                                <div class="thumbnail">
+                                    <div class="caption">
+                                        <h4>Una gran alegría originó la actividad Montaña de la Alegría</h4>
+                                        <h5>20 agosto 2018</h5>
+                                        <p>Proyecto recreativo y psicoterapéutico que se realiza desde el año 2002.</p>
+                                    </div>
                                 </div>
+                            </a>
+                        </div>
+                        <div class="col-md-12">
+                            <a href="">
+                                <div class="thumbnail">
+                                    <div class="caption">
+                                        <h4>A volar con Sky</h4>
+                                        <h5>20 agosto 2018</h5>
+                                        <p>La Fundación Niño y Cáncer quiere agradecer a SKY por su increible
+                                            invitación.
+                                            El Miércoles 4 de
+                                            Octubre fuimos a volar en su nuevo avión A320neoSky.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-12 ">
+                            <a href="">
+                                <div class="thumbnail">
+                                    <div class="caption">
+                                        <h4>Finalizó proceso de postulación a Becas de Estudio 2018</h4>
+                                        <h5>20 agosto 2018</h5>
+                                        <p>El objetivo de este proyecto es beneficiar a jóvenes recuperados de cáncer.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div><!-- / sidebarnoticias -->
+                    <div class="proximas-actividades">
+                        <h3>Próximas actividades</h3>
+                        <a href="">
+                            <div class="col-md-12">
+                                <h6>10 noviembre 2018</h6>
+                                <h4> Nombre de la Actividad</h4>
+                                <p>Descripción breve de la actividad sit amet consectetur adipisicing elit.</p>
                             </div>
                         </a>
-                    </div>
-                    <div class="col-md-12">
                         <a href="">
-                            <div class="thumbnail">
-                                <div class="caption">
-                                    <h4>A volar con Sky</h4>
-                                    <h5>20 agosto 2018</h5>
-                                    <p>La Fundación Niño y Cáncer quiere agradecer a SKY por su increible invitación.
-                                        El Miércoles 4 de
-                                        Octubre fuimos a volar en su nuevo avión A320neoSky.</p>
-                                </div>
+                            <div class="col-md-12">
+                                <h6>10 noviembre 2018</h6>
+                                <h4> Nombre de la Actividad 2</h4>
+                                <p>Descripción breve de la actividad sit amet consectetur adipisicing elit.</p>
                             </div>
                         </a>
-                    </div>
-                    <div class="col-md-12 ">
                         <a href="">
-                            <div class="thumbnail">
-                                <div class="caption">
-                                    <h4>Finalizó proceso de postulación a Becas de Estudio 2018</h4>
-                                    <h5>20 agosto 2018</h5>
-                                    <p>El objetivo de este proyecto es beneficiar a jóvenes recuperados de cáncer.</p>
-                                </div>
+                            <div class="col-md-12">
+                                <h6>10 noviembre 2018</h6>
+                                <h4> Nombre de la Actividad 3</h4>
+                                <p>Descripción breve de la actividad sit amet consectetur adipisicing elit.</p>
                             </div>
                         </a>
+
                     </div>
                 </div><!-- / col-md-3 -->
             </div>
