--- a/index.html
+++ b/index.html
@@ -108,28 +108,28 @@
         <div class="col-md-12 seccionheader">
           <h1>¿QUÉ HACEMOS?</h1>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-6">
           <div class="circle">
             <img src="image/hand.svg" width="100%">
           </div>
           <h3>Apoyamos a Cada Uno</h3>
           <p>Nuestros niños son prioridad durante toda su enfermedad.</p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-6">
           <div class="circle">
             <img src="image/espacio.svg" width="90%">
           </div>
           <h3>Construímos Espacios para su Bienestar</h3>
           <p>Creamos los espacios de recreación que mejoran la calidad de vida durante y posterior a su enfermedad.</p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-6">
           <div class="circle">
             <img src="image/people.svg" width="90%">
           </div>
           <h3>Velamos por su Reintegración Social</h3>
           <p>Los apoyamos en sus estudios a través de Becas.</p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-6">
           <div class="circle">
             <img src="image/Familia.svg" width="80%">
           </div>
@@ -140,10 +140,10 @@
     </div>
     <div class="row">
       <div class="container">
-        <div class="col-md-12 text-center">
+        <div class="col-md-12 col-sm-12 text-center">
           <h2>¿Cómo nos puedes Ayudar?</h2>
         </div>
-        <div class="col-md-6 text-center">
+        <div class="col-md-6 col-sm-6 text-center">
           <h3>Voluntariado</h3>
           <div class="subvoluntario1">
           </div>
@@ -154,7 +154,7 @@
               <p><a href="#" class="btn btn-default" role="button">Conócelas</a></p>
           </div>
         </div>
-        <div class="col-md-6 text-center">
+        <div class="col-md-6 col-sm-6 text-center">
           <h3>Donaciones</h3>
           <div class="subdonacion1 text-center">
             <img src="image/noun_Pig_104182.svg">
@@ -170,14 +170,13 @@
 
     <div class="row">
       <div class="container">
-        <div class="col-md-6">
+        <div class="col-md-6 col-sm-6">
           <div class="avatarequipo2" id="img1"></div>
           <div class="avatarequipo2" id="img2"></div>
           <div class="avatarequipo2" id="img3"></div>
           <div class="avatarequipo2" id="img4"></div>
-          <h2 id="quienes-somos">¿Quiénes somos?</h2>
         </div><!-- fin col md 6-->
-        <div class="col-md-6 parrafos">
+        <div class="col-md-6 col-sm-6 parrafos">
           <h2>¿Quiénes Somos?</h2>
           <p>En el año 1992 se creó la Fundación Oncológica Las Condes, atendiendo a niños y adultos con cáncer. En el
             año 2000 se modifican sus estatutos según el decreto N° 994 publicado en el Diario Oficial N° 36817, para
@@ -192,10 +191,10 @@
     </div>
     <div class="row">
       <div class="container text">
-        <div class="col-md-12 seccionheader">
+        <div class="col-md-12 col-sm-12 seccionheader">
           <h2>Noticias</h2>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-3">
           <a href="">
             <div class="thumbnail">
               <div class="caption">
@@ -206,19 +205,19 @@
             </div>
           </a>
         </div>
-        <div class="col-md-3">
-          <a href=""></a>
-          <div class="thumbnail">
-            <div class="caption">
-              <h4>A volar con Sky</h4>
-              <h5>20 agosto 2018</h5>
-              <p>La Fundación Niño y Cáncer quiere agradecer a SKY por su increible invitación. El Miércoles 4 de
-                Octubre fuimos a volar en su nuevo avión A320neoSky.</p>
+        <div class="col-md-3 col-sm-3">
+          <a href="">
+            <div class="thumbnail">
+              <div class="caption">
+                <h4>A volar con Sky</h4>
+                <h5>20 agosto 2018</h5>
+                <p>La Fundación Niño y Cáncer quiere agradecer a SKY por su increible invitación. El Miércoles 4 de
+                  Octubre fuimos a volar en su nuevo avión A320neoSky.</p>
+              </div>
             </div>
-          </div>
           </a>
         </div>
-        <div class="col-md-3 ">
+        <div class="col-md-3 col-sm-3 ">
           <a href="">
             <div class="thumbnail">
               <div class="caption">
@@ -229,7 +228,7 @@
             </div>
           </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-3">
           <a href="">
             <div class="thumbnail">
               <div class="caption">
@@ -241,7 +240,7 @@
             </div>
           </a>
         </div>
-        <div class="col-md-3 ">
+        <div class="col-md-3 col-sm-3">
           <a href="">
             <div class="thumbnail">
               <div class="caption">
