agregados responsive a thumbnail

--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
     </div>
     <div class="row">
       <div class="container text">
-        <div class="col-md-12 col-sm-12 seccionheader">
+        <div class="col-md-12 col-sm-12 col-xs-12 seccionheader">
           <h2>Noticias</h2>
         </div>
-        <div class="col-md-3 col-sm-3">
+        <div class="col-md-3 col-sm-4 col-xs-12">
           <a href="">
             <div class="thumbnail">
               <div class="caption">
@@ -205,7 +205,7 @@
             </div>
           </a>
         </div>
-        <div class="col-md-3 col-sm-3">
+        <div class="col-md-3 col-sm-4 col-xs-12">
           <a href="">
             <div class="thumbnail">
               <div class="caption">
@@ -217,7 +217,7 @@
             </div>
           </a>
         </div>
-        <div class="col-md-3 col-sm-3 ">
+        <div class="col-md-3 col-sm-4 col-xs-12 ">
           <a href="">
             <div class="thumbnail">
               <div class="caption">
@@ -228,7 +228,7 @@
             </div>
           </a>
         </div>
-        <div class="col-md-3 col-sm-3">
+        <div class="col-md-3 col-sm-4 col-xs-12">
           <a href="">
             <div class="thumbnail">
               <div class="caption">
@@ -240,7 +240,7 @@
             </div>
           </a>
         </div>
-        <div class="col-md-3 col-sm-3">
+        <div class="col-md-3 col-sm-4 col-xs-12">
           <a href="">
             <div class="thumbnail">
               <div class="caption">
@@ -252,7 +252,7 @@
             </div>
           </a>
         </div>
-        <div class="col-md-3 ">
+        <div class="col-md-3 col-sm-4 col-xs-12">
           <a href="">
             <div class="thumbnail">
               <div class="caption">
@@ -263,7 +263,7 @@
             </div>
           </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-4 col-xs-12">
           <a href="">
             <div class="thumbnail">
               <div class="caption">
@@ -274,7 +274,7 @@
             </div>
           </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-4 col-xs-12">
           <a href="news.html">
             <div class="thumbnail masnoticias">
               <div class="caption">
