terminados de arreglar thumbnails

--- a/index.html
+++ b/index.html
@@ -108,28 +108,28 @@
         <div class="col-md-12 seccionheader">
           <h1>¿QUÉ HACEMOS?</h1>
         </div>
-        <div class="col-md-3 col-sm-6">
+        <div class="col-md-3 col-sm-6 col-xs-12">
           <div class="circle">
             <img src="image/hand.svg" width="100%">
           </div>
           <h3>Apoyamos a Cada Uno</h3>
           <p>Nuestros niños son prioridad durante toda su enfermedad.</p>
         </div>
-        <div class="col-md-3 col-sm-6">
+        <div class="col-md-3 col-sm-6 col-xs-12">
           <div class="circle">
             <img src="image/espacio.svg" width="90%">
           </div>
           <h3>Construímos Espacios para su Bienestar</h3>
           <p>Creamos los espacios de recreación que mejoran la calidad de vida durante y posterior a su enfermedad.</p>
         </div>
-        <div class="col-md-3 col-sm-6">
+        <div class="col-md-3 col-sm-6 col-xs-12">
           <div class="circle">
             <img src="image/people.svg" width="90%">
           </div>
           <h3>Velamos por su Reintegración Social</h3>
           <p>Los apoyamos en sus estudios a través de Becas.</p>
         </div>
-        <div class="col-md-3 col-sm-6">
+        <div class="col-md-3 col-sm-6 col-xs-12">
           <div class="circle">
             <img src="image/Familia.svg" width="80%">
           </div>
