se corrigieron errores en carousel

--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
           <div class="carousel-caption">
             <h2>ELLOS NECESITAN DE NUESTRA AYUDA!</h2>
             <p>Únete a la campaña donando $7.000 mensuales.</p>
-            <p style="font-weight:600">¡DONA AQUÍ!</p>
+            <a href="#">¡DONA AQUÍ!</a>
           </div>
         </div>
         <div class="item">
           <div class="carousel-caption">
             <h2>Tú también puedes ser parte!</h2>
             <p>Únete a la campaña donando $7.000 mensuales.</p>
-            <p style="font-weight:600">¡DONA AQUÍ!</p>
+            <a href="#">¡DONA AQUÍ!</a>
           </div>
         </div>
       </div>
