arreglado icon bar white, y padding de footer

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
   </main>
   <footer>
     <div class="container">
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-6 col-xs-12">
         <h4>Contacto</h4>
         <ul>
           <li><b>Fono</b>: 221 708 21, 221 708 11</li>
@@ -300,21 +300,24 @@
           <li></li>
         </ul>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-6 col-xs-12">
         <h4>Mantente Informado!</h4>
-        <form class="navbar-form ">
+        <form class="navbar-form">
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Ingresa tu email por favor">
           </div>
           <button type="submit" class="btn btn-default">Suscríbete</button>
         </form>
       </div>
-      <div class="col-md-4 redes">
+      <div class="col-md-4 col-sm-12 col-xs-12 redes">
         <h4>Síguenos!</h4>
         <ul>
-          <li><a href="#"><img src="image/facebook-white.svg" style="height:35px" alt=""></a> </li>
-          <li><a href="#"><img src="image/instagram.svg" style="height:35px" alt=""></a></li>
-          <li><a href="#"><img src="image/twitter-white.svg" style="height:35px" alt=""></a></li>
+          <li><a href="https://www.facebook.com/ninoycancer/"><img src="image/facebook-white.svg" style="height:35px"
+                alt=""></a> </li>
+          <li><a href="https://www.instagram.com/ninoycancer/?hl=es-la"><img src="image/instagram.svg" style="height:35px"
+                alt=""></a></li>
+          <li><a href="https://twitter.com/ninoycancer/media"><img src="image/twitter-white.svg" style="height:35px"
+                alt=""></a></li>
         </ul>
       </div>
     </div><!-- /container -->
